fix: Start UI action icon alignment (#2957)

--- a/app/style/components/calling/choose-screen.less
+++ b/app/style/components/calling/choose-screen.less
@@ -19,11 +19,9 @@
 
 choose-screen {
   .full-screen;
+  .flex-center;
   background-color: fade(#000, 56%);
-  display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
 .choose-screen-list {
