--- a/app/style/components/search-list.less
+++ b/app/style/components/search-list.less
@@ -69,13 +69,11 @@
 }
 
 .search-list-item-image-overlay {
-  .full-screen();
-  align-items: center;
-  justify-content: center;
-  display: flex;
+  .full-screen;
+  .flex-center;
 
   .background {
-    .full-screen();
+    .full-screen;
     border-radius: 50%;
     opacity: 0;
   }
