--- a/app/style/components/user-profile.less
+++ b/app/style/components/user-profile.less
@@ -81,9 +81,7 @@ user-profile {
 
   > .footer-connection-request {
     .label-bold-xs;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    .flex-center;
     color: #fff;
     text-align: center;
     cursor: pointer;
