--- a/app/style/list/invite-bubble.less
+++ b/app/style/list/invite-bubble.less
@@ -48,13 +48,11 @@
 }
 
 .invite-bubble-button {
-  .label-bold-xs();
-  align-items: center;
+  .label-bold-xs;
+  .flex-center;
   border-top: 1px solid fade(#000, 16%);
   cursor: pointer;
-  display: flex;
   height: 56px;
-  justify-content: center;
 }
 
 .invite-bubble-link {
