--- a/app/style/loading-screen.less
+++ b/app/style/loading-screen.less
@@ -18,9 +18,7 @@
  */
 
 .loading-screen {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  .flex-center;
   background-color: @app-bg;
   color: @graphite;
   position: absolute;
