--- a/app/style/panel/add-participants.less
+++ b/app/style/panel/add-participants.less
@@ -32,10 +32,8 @@
   }
 
   &__tab {
+    .flex-center;
     flex-grow: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 
     color: @graphite-dark;
     font-weight: 600;
